[tool.poetry]
name = "battery-tender"
version = "0.1.0"
description = "Battery Tender Using Smart Plug"
authors = ["John te Bokkel <tanj.tanj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
