[tool.poetry]
name = "battery-tender"
version = "0.1.0"
description = "Battery Tender Using Smart Plug"
authors = ["John te Bokkel <tanj.tanj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
battery-yunruse = "^1.0.0"
python-kasa = "^0.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
